# -NIX

./: LICENSE  Performance Optimization - Qemu-KVM Guests.md  QemuSnapShotManagement.md  README.md
Debian 10/: Boot DEB10-DEV-VPC.desktop  Readme.md  RunWin10DevVpc.sh
Debian 10/DEV/FaceDetect/: CMakeLists.txt  FaceDetect.cpp
Debian 10/Networking/: Setup MAC-VLAN.md  SetupWifi.md
Debian 10/RemoteDesktop/: RDP_TO_LOCAL SESSION.md
Debian 10/System/: PerformanceTweaks.MD  conkyconfig_.conkyrc  conkyconfig_.conkyrc_sample
Debian 10/Virtualization/QEMU-KVM/: Boot WIN10-DEV-VPC.sh  (+2 more)
Lubuntu 20.04/: Networks.md
Lubuntu 20.04/RemoteDesktop/: Tweaks.MD
Lubuntu 20.04/WIN10-Theme/: HowTo.md  ReplceSymIconsToOrg.sh  smallfiles.txt
Lubuntu 22.04/: BluetoothAudioWithRemoteSession.md  ReconnectAirDopes141.sh  ReconnectBluetooth.sh  Virtualization.md
Raspberry Pi 4/: EnableSoundInRDP.md  EnhanceAudio.md  FastBrowsingWithRamDisk.md  PrimaryDesktopTweak.md  ProductivityTweaks.md
Raspberry Pi 4/MirrorDisplay/: Mirror.md  config.txt
Raspberry Pi II (Buster)/: BootSSD.md  DockerSetup.md  ExtendSDMemoryLifeSpanTweaks.md  MediaServer.md  MinimalNetworkBandwidthMonitor.md  NetworkBandwidthMonitoring.md  NetworkFailoverWithMultipleGateways.md  ensure_mysql_consistency.sh  ensure_pihole_on_startup.sh
UBUNTU-CUSTOM-ISO/: Cubic.md
WIN10-Theme/: Lubuntu 20.04.MD  smallfiles.txt
Windows/: OpenSSHServerKeyBasedAuthentication.md  RemoteDesktopOverHttpProxy.md  RemoteDesktopOverProxy.md
Windows/Containers/: DockerNetworks.md  HyperV-Qemu-KVM.md
Windows/Remote/: RemoteSSH.md
(+17 files in other folders)
